cluster/apps/default/random-gif/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: random-gif
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    external-dns.alpha.kubernetes.io/target: "dns.${SECRET_LAB_DOMAIN}"
spec:
  tls:
    - secretName: "${SECRET_LAB_DOMAIN/./-}-tls"
      hosts:
        - rgif.${SECRET_LAB_DOMAIN}
  rules:
    - host: rgif.${SECRET_LAB_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: random-gif
                port:
                  name: http
